Refactoring servizi rest chatbot
